k8s/platform/monitoring/elk/elk-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-zero-trust
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  policyTypes:
    - Ingress
  ingress:
    # Solo Kibana y Filebeat pueden hablar con Elastic
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kibana
      ports:
        - port: 9200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: filebeat
      ports:
        - port: 9200
